tests/paczka1/fuzzy1/16542090.err
Error in line 6: QutjiniLs S142 8,6
Error in line 10: A593 S826 67,4
